Verdana, white, simple

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <hgroup class="heading">
-  <img class="logo" src="{{ "/img/how-css-works@2x.png" | prepend: site.baseurl }}" alt="How CSS works logo">
+  <!-- <img class="logo" src="{{ "/img/how-css-works@2x.png" | prepend: site.baseurl }}" alt="How CSS works logo"> -->
   <h1 class="title">
     How <strong>CSS</strong> works
   </h1>
